# douyin-fetcher-standalone

./: .gitignore  Dockerfile  README.md  README.zh-CN.md  config.example.yml  detail_api_response.json  douyin_parser.py  expose_data.json  external_backends.py  get_cookie.py  headed_user_page.html  hydrated_render_data.json  inline_player_data.json  pyproject.toml  requirements.txt  run.py  ssr_render_data.json  user_page.html  user_page_debug.html  video_render_data.json
.memory/: activeContext.md  progress.md
auth/: __init__.py
backends/: __init__.py  browser_fallback.py  dy_downloader_backend.py  f2_backend.py  venv_manager.py  ytdlp_backend.py
cli/: __init__.py  main.py
config/: __init__.py  config_loader.py  default_config.py
control/: __init__.py
core/: __init__.py  api_client.py  audio_extraction.py  downloader_base.py  metadata.py  silent_audio.py  transcript_manager.py  url_parser.py  user_downloader.py  video_downloader.py
core/user_modes/: __init__.py  base_strategy.py  collect_strategy.py  post_strategy.py
img/: __init__.py
scratch/: analyze_video_page.py  check_login.py  detect_user_dom.py  export_state.py  inspect_detail_network.py  inspect_page_text.py  inspect_redirect.py  inspect_video_tag.py  inspect_window.py  inspect_window_vars.py  listen_api.py  locate_dom_snippet.py  parse_detail_json.py  parse_user.py  save_headed_html.py  screenshot_user_page.py  search_json.py  test_dom.py  test_headed_cookies.py  test_headed_user.py  test_hook.py  test_hook_binary.py  test_intercept.py  test_video_details.py  test_video_dom.py  test_video_hydrated.py
server/: __init__.py  app.py
skills/: SKILL.md
storage/: __init__.py
tests/: test_collection_integrity.py  test_integration_smoke.py  test_silent_audio.py
tools/: __init__.py  cookie_fetcher.py
utils/: __init__.py  cookie_utils.py  helpers.py  logger.py
