[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "douyin-downloader"
version = "2.0.0"
description = "【免责声明：本项目仅用于学术研究与技术交流，使用者自担风险】抖音下载器 - 支持视频/图集/合集/音乐/评论批量下载、ASR台词转写、多后端架构"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "aiohttp>=3.9.0",
    "aiofiles>=23.2.1",
    "aiosqlite>=0.19.0",
    "rich>=13.7.0",
    "pyyaml>=6.0.1",
    "python-dateutil>=2.8.2",
    "gmssl>=3.2.2",
    "imageio-ffmpeg==0.6.0",
]

[project.optional-dependencies]
browser = [
    "playwright>=1.40.0",
]
asr = [
    "openai-whisper>=20231117",
]
transcribe = [
    "openai-whisper>=20231117",
]
server = [
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "pydantic>=2.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.4.0",
    "httpx>=0.25",
    "hypothesis>=6.0",
]
all = [
    "douyin-downloader[browser,asr,transcribe,server,dev]",
]

[project.scripts]
douyin-dl = "cli.main:main"

[tool.setuptools.packages.find]
include = ["cli*", "core*", "auth*", "config*", "control*", "storage*", "utils*", "tools*", "server*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["."]
testpaths = ["tests"]
filterwarnings = [
  "ignore:Exception in thread Thread-.*_connection_worker_thread:pytest.PytestUnhandledThreadExceptionWarning",
]

[tool.ruff]
target-version = "py38"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
